# stocks-feed

./: Dockerfile  README.md  pyproject.toml  requirements.txt
lambda_function/: lambda_function.py
notebooks/: api_explore.ipynb
stocks_feed/: aws_utils.py  dataloader.py  plotter.py  risk.py
