[tool.poetry]
name = "stocks-feed"
version = "0.1.0"
description = "Pipeline for pulling, storing and visualizing stock prices and derived metrics."
authors = ["Adrien Porter <adrien.porter@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "stocks_feed"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
seaborn = "^0.13.2"
requests = "^2.31.0"
statsmodels = "^0.14.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
